change the score endpoint params
