# src/api/components/game/game.routes.js
@@ -3,6 +3,6 @@ const gameRoutes = express.Router()
 const gameController = require('./game.controller')
 
 gameRoutes.get('/', gameController.findGames)
-gameRoutes.get('/scores/season/:season/week/:week', gameController.playGames)
+gameRoutes.get('/scores', gameController.playGames)
 
 module.exports = gameRoutes
