# src/api/components/team/team.routes.js
@@ -4,9 +4,5 @@ const teamController = require('./team.controller')
 
 teamRoutes.get('/:identifier', teamController.findOneTeam)
 teamRoutes.get('', teamController.findAllTeams)
-teamRoutes.get(
-    '/seasons/:identifier/divisions',
-    teamController.findTeamsByDivision
-)
 
 module.exports = teamRoutes
