# swagger.json
@@ -95,32 +95,6 @@
                  }
             }
         },
-        "/teams/seasons/{season}/divisions": {
-            "get": {
-                "tags": [
-                    "Teams"
-                ],
-                "summary": "Get teams by division",
-                "parameters": [
-                    {
-                        "name": "season",
-                        "in": "path",
-                        "schema": {
-                            "$ref": "#/definitions/Team"
-                        }
-                    }
-
-                ],
-                "responses":{
-                    "200":{
-                       "description":"OK",
-                       "schema":{
-                          "$ref":"#/definitions/Team"
-                       }
-                    }
-                 }
-            }
-        },
         "/games": {
             "get": {
                 "tags": [
@@ -164,7 +138,7 @@
                  }
             }
         },
-        "/games/scores/season/{season}/week/{week}": {
+        "/games/scores": {
             "get": {
                 "tags": [
                     "Games"
@@ -173,14 +147,14 @@
                 "parameters": [
                     {
                         "name": "season",
-                        "in": "path",
+                        "in": "query",
                         "schema": {
                             "$ref": "#/definitions/Games"
                         }
                     },
                     {
                         "name": "week",
-                        "in": "path",
+                        "in": "query",
                         "schema": {
                             "$ref": "#/definitions/Games"
                         }
